fix: margin so that main content does not overlap the nav bar

--- a/workout-tracker/src/App.css
+++ b/workout-tracker/src/App.css
@@ -1,5 +1,7 @@
- .App {
+.App {
   text-align: center;
+  margin-top: 54px;
+  padding-top: 4px;
 }
 
 .App-logo {
@@ -8,8 +10,8 @@
   pointer-events: none;
 }
 
- .App-header {
-  background-color: #FFFFFF;
+.App-header {
+  background-color: #ffffff;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -30,5 +32,4 @@
   to {
     transform: rotate(360deg);
   }
-} 
- 
+}
